(library
 (name lib)
 (modules lib)
 (libraries
  aslp_offline.aarch64
  zarith_stubs_js
  (re_export asli.libASL-virtual)
  libASL_support_web
  (re_export js_of_ocaml)))

(executable
 (name js)
 (modes js)
 (modules js)
 (libraries lib)
 (flags (-w -32))
 (preprocess
  (pps js_of_ocaml-ppx)))


(rule
 (targets jstemp.bc.js jstemp.bc.map)
 (deps js.bc.js ../sourcemap.py)
 (enabled_if (= profile dev))
 (action
  (run python3 ../sourcemap.py js.bc.js jstemp.bc.js js.bc.map)
  )
)

(rule
 (targets jstemp.bc.js jstemp.bc.map)
 (deps js.bc.js)
 (enabled_if (<> profile dev))
 (action
   (progn
   (copy js.bc.js jstemp.bc.js)
   (bash "touch jstemp.bc.map")
  ))
)


(executable
 (name builder)
 (modes js)
 (modules builder)
 (libraries lib)
 (preprocess
  (pps js_of_ocaml-ppx)))

(rule
 (target aslp.heap)
 (deps builder.bc.js lib/pako.min.js cache.js)
 (action
  (run node ./cache.js)
  ))

; javascript executable to build aslp.heap

(install
 (files builder.bc.js cache.js)
 (section bin))

; static files for distribution

(install
 (files
  (jstemp.bc.js as js.bc.js)
  (jstemp.bc.map as js.bc.map)
  index.html
  reset.css
  aslp.js
  worker.js
  worker-stone.js
  cache.js
  aslp.heap
  ) (section lib))
