(library
 (name lib)
 (modules lib)
 (libraries
  zarith_stubs_js
  (re_export asli.libASL-virtual)
  libASL_support_web
  (re_export js_of_ocaml)))

(executable
 (name js)
 (modes js)
 (modules js)
 (libraries lib)
 (js_of_ocaml
  (sourcemap file))
 (preprocess
  (pps js_of_ocaml-ppx)))


(executable
 (name builder)
 (modes js)
 (modules builder)
 (libraries lib)
 (preprocess
  (pps js_of_ocaml-ppx)))

(rule
 (target aslp.heap)
 (deps builder.bc.js lib/pako.min.js cache.js)
 (action
  (run node ./cache.js)
  ))

; javascript executable to build aslp.heap

(install
 (package aslp_web)
 (files builder.bc.js cache.js)
 (section bin))

; static files for distribution

(rule (copy %{lib:aslp_offline_js:offline_js.bc.js} offline_js.bc.js))
(rule (copy %{lib:aslp_offline_js:offline_js.bc.map} offline_js.bc.map))

(install
 (package aslp_web)
 (files
  js.bc.js
  js.bc.map
  offline_js.bc.js
  offline_js.bc.map

  index.html
  404.html
  reset.css
  aslp.js
  aslp_output.js
  worker.js
  worker-offline.js
  worker-stone.js
  cache.js
  aslp.heap
  ) (section lib))
